fix hero image being too big

--- a/src/style.css
+++ b/src/style.css
@@ -193,7 +193,6 @@ a {
 #hero {
     display: flex;
     height: 100vh;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
 }
 #hero-card {
     display: flex;
@@ -213,13 +212,13 @@ a {
 }
 #hero-title-image {
     max-width: 500px;
-    max-height: 300px;
+    max-height: 220px;
 }
 #hero-title-text {
     display: none;
 }
 #hero-desc {
-    font-size: 1.1rem;
+    font-size: 1.05rem;
     width: 40vw;
     margin-top: 0.5rem;
 }
@@ -227,7 +226,7 @@ a {
     display: flex;
     flex-direction: row;
     margin-top: 1rem;
-    gap: 20px;
+    gap: 10px;
 }
 #hero-button {
     padding: 10px 20px;
@@ -428,14 +427,16 @@ a {
     justify-content: center;
     align-items: center;
     background-color: rgba(170, 170, 170, 0.85);
-    padding: 1.5vw 3vw;
+    padding: 1.2vw 2.4vw;
     border-radius: 12px;
     box-shadow: inset 0px 0px 20px 1px rgb(66, 66, 66);
     width: 20%;
     transition: all 200ms ease;
+    overflow: hidden;
 }
 .service-card-image {
     width: 100%;
+    transition: all 200ms ease;
 }
 #service-section {
     min-height: 100vh;
